RESOLVED KNOWAGE-2685: Use the scrollbar like in the workspace in the business model list https://production.eng.it/jira/browse/KNOWAGE-2685

--- a/knowage/src/main/webapp/themes/commons/css/SASS/components/_qbeEngine.scss
+++ b/knowage/src/main/webapp/themes/commons/css/SASS/components/_qbeEngine.scss
@@ -1,5 +1,10 @@
 .kn-qbe {
 
+    .qbeList{
+        overflow-y: auto;
+        @include coolScrollBars($baseColor,6px);
+    }
+
 	ul {
 		&[dnd-list]{
         	margin: 0px;
@@ -536,6 +541,7 @@
     }
     [ng-drag].dragging {
         position: absolute;
+        background-color: $pageBackground;
     }
 	
 }
